# openworld-2

./: .gitignore  .vercelignore  BUILD_GAME.md  DEPLOYMENT.md  GAME_COMPLETE.md  GAME_EXE_README.txt  MATCHMAKING.md  MULTIPLAYER_ARCHITECTURE.md  README.md  RUN_GAME.bat  RUN_GAME.sh  VERCEL_DEPLOY.md  WEATHER_SYSTEM.md  achievements.js  advanced-graphics.js  combat.js  deploy-vercel.bat  dialogue.js  enhanced-leveling.js  enhanced-map-system.js  game-ai-pathfinder.js  game-ai-state.js  game-ai-steering.js  game-ai-vector2d.js  game-ai.js  game.html  haveila.html  index.html  interactive-house-system.js  interior-wasm.js  lore.js  matchmaking.js  mission-system.js  multiplayer.js  package.json  pets.js  quests.js  settings.js  setup-game.bat  shop.js  (+6 more)
api/: game-modes.js  index.js  server.js
cpp/: CMakeLists.txt  GameServer.cpp  GameServer.h  GameServerMain.cpp  GameTypes.h  InteriorGen.cpp  InteriorGen.h  InteriorGenWasm.cpp  Mission.cpp  Mission.h  MultiplayerModes.cpp  MultiplayerModes.h  Planets.cpp  Planets.h  Quest.cpp  Quest.h  QuestData.cpp  QuestData.h  README.md  Weapon.cpp  Weapon.h  WeaponTypes.h  Zombies.cpp  Zombies.h  build_interior_wasm.bat  main.cpp
game-server/: README.md  package.json  server.js
